public/stylesheets/application.css
body {
	font-family: arial, helvetica, sans-serif;
	font-size: 14px;
	text-align: center;
	margin: 0;
}

table {
        text-align: left;
}

A:link {text-decoration: none;color: blue;}
A:visited {text-decoration: none;color: blue;}
A:active {text-decoration: none;color: red;}
A:hover {text-decoration: none; color: red;}

.sub_menu a:link {;color: black;}
.sub_menu a:visited {color: black;}
.sub_menu a:active {color: black;}
.sub_menu a:hover {text-decoration: none; color: red;}


div.tag_symbol { z-index: 20 }
div.tag_symbol .alt { display: none }

div.tag_symbol:hover { color: #FF3300;  display: inline;  }
div.tag_symbol:hover span.alt {
  display: inline; position: absolute; z-index: 30;
  margin: 2em 0 0 -4em;  padding: 0.2em 0.3em;
  border: 1px solid gray;
  text-decoration:none;
  background-color: #FFFFCC;
  color: black;
  font-size: 10px;
}

h3.compact {
    margin-bottom:6px;
    margin-top:10px
}

div.false_tag {
    margin: 2px;
    border:2px solid silver;
    font-size:9px;
    display:inline;
    white-space: nowrap;
}
div.true_tag {
    margin: 2px;
    border:2px solid red;
    font-size:10px;
    display:inline;
    white-space: nowrap;
}
div.false_tag a, div.true_tag a {
    color:black;
    text-decoration:none;
}

.calender {
    font-size : 120%;
    margin-bottom: 30px;
}

.calender .footer {
    font-size:80%;
    color:gray;
    margin-top:5px;
    text-align:right;
    width:450px
}

.calender table { 
    text-align:center;
    border-collapse: collapse;
    border-style: solid;
    border-width: 1px;
    border-color:gray
}

.calender table tr th {
    border-bottom-style: solid;
    border-width: 1px;
    border-color: gray
}

.calender_activities {
    float:right;
    min-height:158px;
    padding-left:10px;
    color:#444444
}


.center {
    margin-left: auto;
    margin-right: auto;
    width: 6em;

}


.activity_header {
background:#EEEEFF none repeat scroll 0 0;
padding-top:5px;
}

select#activity_name {width:140px}

.status_icons{
    padding-left: 20px;
}

.action_icons img, .action_icons input{
    padding-right: 6px;
}


div#hours_form select{
  width: 100px;
}

ul.reports{
		list-style: none;
		font-size: 18px;
}

ul.reports li{
		padding-bottom: 4px;
}

td.report a, h4 a{
        text-decoration: none;
}

td.report a:hover{
        text-decoration: underline;
}

table td input, table td img {
    vertical-align: middle;
}

table tbody tr td, table tbody tr th  {
        vertical-align:top;
}

table.compact tbody tr td, table.compact tbody tr th  {
        padding-right: 0px;
}

table.vacation tbody tr td, table.vacation tbody tr th  {
        padding-right: 0px;
        text-align: center;
}
table.vacation tbody tr td.user  {
        text-align: left;
}

table.regular { 
    border-collapse: collapse;
    border-spacing: 10px 0px;
}

table.regular tbody tr th  {
        background:#EEEEEE none repeat scroll 0 0;
        
}
table.regular tbody tr th, table.regular tbody tr td  {
        padding-right: 10px;
}

a.menu_link {
	text-decoration:none;
	color: #ffffff;
}

a:hover.menu_link {
	text-decoration:none;
	color: #c80000;
}

a img {
        border: none;
}

.time_entry {
	padding-left: 1em;
}

td.actions {
        text-align:right
}

td.actions img, td.actions input{
        padding-left: 0.5em;
}

.time_entry td a{
	color: black;
        text-decoration: none;
}
.time_entry td a:hover{
        text-decoration: underline;
}

.menu_item {
	float: left;
	width: 100px;
	padding: 10px;
	border-right: 1px solid #ffffff;
	text-align: center;
}

.inline_form {
	display: inline;
}

.inline_form div {
	display: inline;
}

.navigation {
	text-align: center;
}

.navigation span {
	display: inline-block;
	width: 9em;
}

.ok, .ok a { color: green; }
.warn, .warn a { color: orange; }
.error, .error a { color: red; }

.error, .red {
	color: #c80000;
}

.notice {
	color: green;
}

.grayed {
        color: #bbbbbb;
}

.disabled {
        color: gray;
}

.content {
	padding: 1em;
}

.time_entry {
	padding-top: 5px;
	padding-bottom: 5px;
}

.week_entries {
	text-align: left;
}

.week_entries_hours {
	width: 60px;
	text-align: center;
}

td.week_entries_hours {
	border: 1px solid;
}

.week_entries_activity {
	text-align: left;
}

.activity_multiselect {
	width: 220px;
}

#container {
	margin-left: auto;
	margin-right: auto;
	width: 900px;
	text-align: left;
}

#logo {
	width: 100%;
	background-color: #dfe5d7;
	border-bottom: 1px solid;
	border-left: 1px solid;
	border-right: 1px solid;
}

#menu {
	float: left;
	width: 100%;
	background-color: #003a8d;
	border-bottom: 1px solid;
	border-left: 1px solid;
	border-right: 1px solid;
}

#main {
	float: left;
	width: 100%;
	border-left: 1px dotted;
	border-right: 1px dotted;
	border-bottom: 1px dotted;
}

#footer {
	float: left;
	clear: left;
	width: 100%;
	text-align: center;
}

#conduct_logo {
	border: 0;
	vertical-align: middle;	
}

#new_entry_form {
	padding-left: 1em;
}

